--- a/version-two/home.css
+++ b/version-two/home.css
@@ -64,6 +64,7 @@ header p {
 	display: block;
 	text-align: center;
 	margin-bottom:40px;
+	margin-top:50px;
 }
 
 #left ul {
@@ -165,15 +166,28 @@ footer {
   100% {
     opacity: 1.0;
     }
+}
 
 
-@media all and (max-width: 1098px) {
-	#shopatron {
-		left: -14%;
+@media all and (max-width:1068px) {
+
+
+	#right #experience-wrap div{
+		float: none;
+		width: 100%;
 	}
 
-	#right div {
-		width: 410px;
+	#right ul {
+		list-style: none;
+		text-align: center;
+	}
+
+	#right #experience-wrap {
+		left: 0%;
+	}
+
+	#left {
+		margin-top: 120px;
 	}
 }
 
