--- a/version-two/home.css
+++ b/version-two/home.css
@@ -150,6 +150,47 @@ transition: background-color 1s ease;
 .experience-work {
 	display:none;
 }
+
+
+div#examples {
+display: block;
+text-align: center;
+margin-bottom: 40px;
+margin-top: 50px;
+}
+
+#examples .before {
+	width: 45%;
+	cursor: pointer;
+}
+
+#examples .after {
+	width: 45%;
+	cursor: pointer;
+}
+
+#before {
+	float: left;
+	display: inline;
+	margin-bottom: 100px;
+}
+
+#after {
+	float: left;
+	display: inline;
+}
+
+.full-size-before {
+	display: none;
+	width: 100%;
+	cursor: pointer;
+}
+
+.full-size-after {
+	display: none;
+	width: 100%;
+	cursor: pointer;
+}
 footer {
 	height: 50px;
 	background-color: #ebebeb;
@@ -158,6 +199,7 @@ footer {
 	width: 100%;
 	position: absolute;
 }
+
 
 @-webkit-keyframes opacityHeader {
   0% {
