--- a/dropbox_test/CSS/SCSS/styles.css
+++ b/dropbox_test/CSS/SCSS/styles.css
@@ -494,4 +494,10 @@ footer {
     padding-right: 10px;
     padding-left: 10px; } }
 
+  @media all and (max-width: 445px) {
+    #what-can-dropbox #slider {
+      height: 206px;
+    }
+  }
+
 /*# sourceMappingURL=styles.css.map */
