make the marquee responsive lol

--- a/css/index.css
+++ b/css/index.css
@@ -35,13 +35,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px;
+  flex-wrap: wrap;
 }
 
 .hero {
   background: linear-gradient(269deg, #d7a9ec, #eca9c9, #a9ecde, #e7eca9);
   background-size: 800% 800%;
   height: 50vh;
-  margin: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -50,6 +51,7 @@
   -moz-animation: rainbow 30s ease infinite;
   animation: rainbow 30s ease infinite;
   opacity: 0.6;
+  overflow: hidden;
 }
 
 @-webkit-keyframes rainbow {
